2014-02-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change: for X chrom, also use male to get AF
	* Support generating covariance matrix for dominant/recessive model
	* Change now, by default, rvtests drops samples with missing covariates (to resume previous behavior, imputing to the mean, use --imputeCov). 
	
2014-02-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise --useResidualAsPhenotype, now regress out intercept by default

2014-02-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug in MetaCov outputs

2013-11-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support X chromosome analysis

2013-05-03  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change frequency cutoff to minor allele frequency cutoffs when using --freqLower / --freqUpper

2013-04-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add conditional analysis
	* Add family burden tests
